Bibliography build bug resolved

--- a/Proposal/proposal.tex
+++ b/Proposal/proposal.tex
@@ -37,7 +37,7 @@
         
         \vspace{2cm}
         
-        \textbf{Flynn Kelly}\\
+        \textbf{Flynn Kelly DRAFT}\\
         47418589\\
         
         Commenced: 17/02/2024 - S1 2024\\
