--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -1,14 +1,279 @@
-@article{feynman,
-    issn = {0020-7748},
-    journal = {International Journal of Theoretical Physics},
-    pages = {467--488},
-    volume = {21},
-    publisher = {Kluwer Academic Publishers-Plenum Publishers},
-    number = {6-7},
-    year = {1982},
-    title = {Simulating physics with computers},
-    language = {eng},
-    address = {New York},
-    author = {Feynman, Richard},
-    keywords = {Physics;},
+﻿@inproceedings{antennaArchitecture,
+  author    = {Yardley, Heath J.},
+  booktitle = {2007 IEEE Radar Conference},
+  title     = {Bistatic Radar Based on DAB Illuminators: The Evolution of a Practical System},
+  year      = {2007},
+  volume    = {},
+  number    = {},
+  pages     = {688-692},
+  keywords  = {Bistatic radar;Bandwidth;Digital audio broadcasting;Radar detection;Radar antennas;Resonator filters;Interference;Transmitters;Signal design;Passive radar},
+  doi       = {10.1109/RADAR.2007.374302}
 }
+
+@inproceedings{AntennaHW,
+  author    = {Moallemizadeh, A. and Hassani, H. R. and Nezhad, S. Mohammad Ali},
+  booktitle = {2012 6th European Conference on Antennas and Propagation (EUCAP)},
+  title     = {Wide bandwidth and small size LPDA antenna},
+  year      = {2012},
+  volume    = {},
+  number    = {},
+  pages     = {1-3},
+  keywords  = {Dipole antennas;Fractals;Bandwidth;Resonant frequency;Microstrip antennas;Shape;Substrates;LPDA antenna;fractal;wide bandwidth},
+  doi       = {10.1109/EuCAP.2012.6206312}
+}
+
+@misc{Cilentium,
+  author       = {Stew Magnuson},
+  title        = {`Passive' Radar Can Give Soldiers Stealth in Urban Battlegrounds},
+  year         = {2023},
+  howpublished = {\url{http://nationaldefensemagazine.org/articles/2023/3/28/passive-radar-can-give-soldiers-stealth-in-urban-battlegrounds}},
+  note         = {Accessed: 2024-03-11}
+}
+
+@article{DABambiguity,
+  title  = {Ambiguity Function Analysis and Direct-Path Signal Filtering of the Digital Audio Broadcast (DAB) Waveform for Passive Coherent Location (PCL)},
+  author = {Guner, Abdulkadir},
+  year   = {2002}
+}
+
+  @inproceedings{DABfeatures,
+  author    = {Coleman, C.J. and Watson, R.A. and Yardley, H.},
+  booktitle = {2008 IEEE Radar Conference},
+  title     = {A practical bistatic passive radar system for use with DAB and DRM illuminators},
+  year      = {2008},
+  volume    = {},
+  number    = {},
+  pages     = {1-6},
+  keywords  = {Passive radar;Radio broadcasting;Digital audio broadcasting;Bioreactors;Radio transmitters;Bandwidth;Bistatic radar;Digital Radio Mondiale;Radar tracking;Monitoring;Passive Bistatic Radar;Digital Audio Broadcasting;Digital Radio Mondiale},
+  doi       = {10.1109/RADAR.2008.4721007}
+}
+
+
+@inproceedings{DABprocessingChain,
+  author    = {Schüpbach, Christof and Welschen, Samuel},
+  booktitle = {2018 19th International Radar Symposium (IRS)},
+  title     = {Direct Signal Interference Mitigation By Slow-Time Frequency Correction For OFDM-Based Passive Radar},
+  year      = {2018},
+  volume    = {},
+  number    = {},
+  pages     = {1-10},
+  keywords  = {OFDM;Surveillance;Receivers;Doppler effect;Interference;Passive radar;Delays},
+  doi       = {10.23919/IRS.2018.8448150}
+}
+
+
+@phdthesis{DABsamplingChain,
+  title  = {DAB Processing Chain for Passive Radar Applications},
+  author = {Tilbury, C},
+  year   = {2020},
+  school = {BS Thesis, Dept Electrical Eng, UCT, Cape Town}
+}
+
+@inproceedings{DABsignal,
+  author    = {Coleman, Cristopher and Yardley, Heath},
+  booktitle = {2008 International Conference on Radar},
+  title     = {DAB based passive radar: Performance calculations and trials},
+  year      = {2008},
+  volume    = {},
+  number    = {},
+  pages     = {691-694},
+  keywords  = {Radar;Receivers;Passive radar;Lighting;Radar antennas;Distance measurement;Transmitters},
+  doi       = {10.1109/RADAR.2008.4654009}
+}
+
+@inproceedings{DABsingleRadar,
+  author    = {Barott, William C. and Engle, Justin},
+  booktitle = {2014 IEEE Radar Conference},
+  title     = {Single-antenna ATSC passive radar observations with remodulation and keystone formatting},
+  year      = {2014},
+  volume    = {},
+  number    = {},
+  pages     = {0159-0163},
+  keywords  = {Digital TV;Time-frequency analysis;Spaceborne radar;Passive radar;Surveillance},
+  doi       = {10.1109/RADAR.2014.6875576}
+}
+
+@article{detectionDABmodulation,
+  author  = {Poullin, D.},
+  year    = {2005},
+  month   = {07},
+  pages   = {143 - 152},
+  title   = {Passive detection using digital broadcasters (DAB, DVB) with COFDM modulation},
+  volume  = {152},
+  journal = {Radar, Sonar and Navigation, IEE Proceedings -},
+  doi     = {10.1049/ip-rsn:20045017}
+}
+
+@article{DSPdab,
+  author   = {Berger, Christian R. and Demissie, Bruno and Heckenbach, JÖrg and Willett, Peter and Zhou, Shengli},
+  journal  = {IEEE Journal of Selected Topics in Signal Processing},
+  title    = {Signal Processing for Passive Radar Using OFDM Waveforms},
+  year     = {2010},
+  volume   = {4},
+  number   = {1},
+  pages    = {226-238},
+  keywords = {Radar signal processing;Passive radar;OFDM;Digital video broadcasting;Matched filters;Signal processing algorithms;Video signal processing;Digital audio broadcasting;Decoding;Frequency division multiplexing;Compressed sensing;multistatic radar;MUSIC;radar processing;sparse estimation;subspace algorithms},
+  doi      = {10.1109/JSTSP.2009.2038977}
+}
+
+@article{DSPfm,
+  author   = {Moscardini, C. and Petri, D. and Capria, A. and Conti, M. and Martorella, M. and Berizzi, F.},
+  journal  = {IEEE Transactions on Aerospace and Electronic Systems},
+  title    = {Batches algorithm for passive radar: a theoretical analysis},
+  year     = {2015},
+  volume   = {51},
+  number   = {2},
+  pages    = {1475-1487},
+  keywords = {Algorithm design and analysis;Doppler effect;Signal processing algorithms;Passive radar;Noise;Surveillance},
+  doi      = {10.1109/TAES.2015.130407}
+}
+
+@techreport{DTSO2009,
+  author      = {James Palmer, Simon Palumbo, Tri-Tan Van Cao and and Howard, Stephen},
+  title       = {A new Illuminator of Opportunity Bistatic Radar
+                 Research Project at DSTO},
+  institution = {Defence Science and Technology Organisation},
+  month       = {May 2009},
+  year        = {2009},
+  type        = {Report}
+}
+
+@inproceedings{DVBnoise,
+  author    = {Yin, Ying and Zhang, Shunsheng and Wu, Fuxia and Zong, Zhulin and Zhang, Wei},
+  booktitle = {2016 CIE International Conference on Radar (RADAR)},
+  title     = {Passive radar detection with DVB-T signals},
+  year      = {2016},
+  volume    = {},
+  number    = {},
+  pages     = {1-5},
+  keywords  = {Passive radar;OFDM;Object detection;Wideband;Correlation;Transforms;Passive Radar;Target Detection;Wideband Synthetic;Radon-Fourier Transform},
+  doi       = {10.1109/RADAR.2016.8059601}
+}
+
+@article{DVBsignal,
+  author  = {Edrich, Michael and Schroeder, Alexander and Meyer, Fabienne},
+  title   = {Design and performance evaluation of a mature FM/DAB/DVB-T multi-illuminator passive radar system},
+  journal = {IET Radar, Sonar \& Navigation},
+  volume  = {8},
+  number  = {2},
+  pages   = {114-122},
+  year    = {2014}
+}
+
+  @mastersthesis{FMlowCost,
+  author = {Sendall, Joshua Leigh},
+  title  = {Implementation of a low-cost bistatic radar},
+  year   = {2016},
+  url    = {http://hdl.handle.net/2263/61335}
+}
+
+  @incollection{FundamentalsPassiveRadar,
+  author     = {Griffiths, Hugh},
+  booktitle  = {Academic Press Library in Signal Processing: Volume 2},
+  doi        = {https://doi.org/10.1016/B978-0-12-396500-4.00016-8},
+  editor     = {Nicholas D. Sidiropoulos and Fulvio Gini and Rama Chellappa and Sergios Theodoridis},
+  issn       = {2351-9819},
+  keywords   = {Radar, Bistatic radar, Tracking, Detection, Waveform diversity, Clutter diversity, Illuminator of opportunity},
+  pages      = {813-855},
+  publisher  = {Elsevier},
+  series     = {Academic Press Library in Signal Processing},
+  title      = {Chapter 16 - Passive Bistatic Radar},
+  url        = {https://www.sciencedirect.com/science/article/pii/B9780123965004000168},
+  volume     = {2},
+  year       = {2014},
+  bdsk-url-1 = {https://www.sciencedirect.com/science/article/pii/B9780123965004000168},
+  bdsk-url-2 = {https://doi.org/10.1016/B978-0-12-396500-4.00016-8}
+}
+
+  @book{INTRO2017,
+  author    = {Griffiths, H. and Baker, Christopher J. and Xplore, Ieee},
+  title     = {An introduction to passive radar},
+  publisher = {Artech House
+               IEEE Xplore},
+  address   = {Boston
+               Piscataqay, New Jersey},
+  edition   = {First Edition},
+  series    = {Artech House radar series},
+  keywords  = {Bistatic radar.
+               Tracking radar.
+               Radar},
+  isbn      = {1630810363
+               9781630810368
+               9781630814311
+               1630814318},
+  year      = {2017},
+  type      = {Book}
+}
+
+% CITED BY EVERYONE
+@inproceedings{IOTpassiveRadar,
+  author    = {Moser, Daniel and Tresoldi, Giorgio and Schüpbach, Christof and Lenders, Vincent},
+  booktitle = {2019 IEEE Radar Conference (RadarConf)},
+  title     = {Design and Evaluation of a Low-Cost Passive Radar Receiver Based on IoT Hardware},
+  year      = {2019},
+  volume    = {},
+  number    = {},
+  pages     = {1-6},
+  keywords  = {Passive radar;Surveillance;Frequency modulation;Receivers;Radar tracking;Aircraft},
+  doi       = {10.1109/RADAR.2019.8835690},
+  issn      = {2375-5318},
+  month     = {April}
+}
+
+@misc{SDRdongle,
+  author       = {{RTL-SDR.com}},
+  title        = {Buy RTL-SDR Dongles (RTL2832U)},
+  howpublished = {\url{https://www.rtl-sdr.com/buy-rtl-sdr-dvb-t-dongles/}},
+  note         = {Accessed: 2024-03-11},
+  year         = 2024
+}
+
+
+@inproceedings{SDRhardware,
+  author = {Calvo-Palomino, Roberto and Ricciato, Fabio and Giustiniano, Domenico and Lenders, Vincent},
+  year   = {2017},
+  month  = {10},
+  pages  = {51-58},
+  title  = {LTESS-track: A Precise and Fast Frequency Offset Estimation for low-cost SDR Platforms},
+  doi    = {10.1145/3131473.3131481}
+}
+
+@article{SDRtheory,
+  title     = {Software-defined radio: a brief overview},
+  author    = {Sadiku, Mathew NO and Akujuobi, Cajetan M},
+  journal   = {Ieee Potentials},
+  volume    = {23},
+  number    = {4},
+  pages     = {14--15},
+  year      = {2004},
+  publisher = {IEEE}
+}
+
+@article{SIGNAL2013,
+  author  = {Mateusz Malanowski, Krzysztof Kulpa, Janusz Kulpa, Piotr Samczynski, Jacek Misiurewicz},
+  title   = {Analysis of detection range of FM-based passive radar},
+  journal = {IET Radar, Sonar and Navigation},
+  year    = {2013},
+  type    = {Journal Article}
+}
+
+@inproceedings{UAVdab,
+  author    = {Schüpbach, Christof and Patry, Christian and Maasdorp, Francois and Böniger, Urs and Wellig, Peter},
+  booktitle = {2017 IEEE Radar Conference (RadarConf)},
+  title     = {Micro-UAV detection using DAB-based passive radar},
+  year      = {2017},
+  volume    = {},
+  number    = {},
+  pages     = {1037-1040},
+  keywords  = {Passive radar;Doppler effect;Receivers;Radio transmitters;Delays;Radar cross-sections},
+  doi       = {10.1109/RADAR.2017.7944357}
+}
+
+@article{zhang2023intelligent,
+  title  = {Intelligent sensor-fused system for traffic monitoring},
+  author = {Zhang, Lu},
+  year   = {2023}
+}
+
+
+
