--- a/eecs-thesis-template-main/common/tex/globals.tex
+++ b/eecs-thesis-template-main/common/tex/globals.tex
@@ -1,12 +1,12 @@
 %-----------------------
 % Global variables
 %-----------------------
-\def\covertext{The Title of Your\\Thesis} % Can be split over two lines with //
-\def\titletext{The Title of Your Thesis}
+\def\covertext{Low Cost Embedded Passive \\ Bistatic Radar Detection Testbed} % Can be split over two lines with //
+\def\titletext{Low Cost Embedded Passive Bistatic Radar Detection Testbed}
 \def\authortext{Flynn Kelly}
-\def\authoremailtext{your.name@uqconnect.edu.au}
-\def\studentnotext{12345678}
-\def\supervisornametext{Professor X}
-\def\supervisoremailtext{supervisor@uq.edu.au}
+\def\authoremailtext{flynn.kelly@uqconnect.edu.au}
+\def\studentnotext{4741858}
+\def\supervisornametext{Professor Bialkowski}
+\def\supervisoremailtext{ksb@uq.edu.au}
 \def\proposalduedate{1 January 1970}
-\def\thesisduedate{1 January 1970}
+\def\thesisduedate{4 November 2024}
