--- a/eecs-thesis-template-main/common/tex/packages.tex
+++ b/eecs-thesis-template-main/common/tex/packages.tex
@@ -5,7 +5,7 @@
 \usepackage[toc,page]{appendix} % More control over appendices
 \usepackage[english]{babel} % Multi-lingual support
 \usepackage{braket} % Dirac bra and ket notation
-\usepackage[style=ieee, maxnames=5, backend=biber]{biblatex} % Comprehensive bibliography support
+%\usepackage[style=ieee, maxnames=5, backend=biber]{biblatex} % Comprehensive bibliography support
 \usepackage{calc} % To reset the counter in the document after title page
 \usepackage{csquotes} % Inline and display quotations
 \usepackage{enumitem} % Includes lists
