--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/00_cover.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/00_cover.tex
@@ -14,7 +14,7 @@
         \large University of Queensland\\
         \vfill
 		\large Submitted for the degree of Bachelor of Science (Honours)\\\smallskip
-        \large in the division of Computer Science
+        \large in the division of Electrical Engineering
         \vfill
 		\large \thesisduedate
 	\end{center}
