--- a/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/01_background.tex
@@ -1,6 +1,16 @@
 \chapter{Background \label{sec:background}}
 \todo[inline]{Background: this should include all (appropriately cited) information (concepts and prior literature) for a layperson to understand your project/experiment.}
-\lipsum[11-13]
+
+The below sections reflect the neccessary research considerations for the project, and will be used to inform the project plan and optimize the implementation.
+
+\section{Passive Radar Fundamentals}
+
+\section{Illuminators of Opportunity}
+
+\section{Range Doppler Mapping}
+
+\section{Radio Hardware}
+
 
 \begin{figure}[h]
     \centering
@@ -9,4 +19,9 @@
     \label{fig:uq}
 \end{figure}
 
+\section{Digital Signal Processing}
+
+\section{IoT Architecture}
+
+\section{Networking with Embedded Hardware}
 \lipsum[14-15]
