--- a/eecs-thesis-template-main/thesis/sections/00_front_matter/03_abstract.tex
+++ b/eecs-thesis-template-main/thesis/sections/00_front_matter/03_abstract.tex
@@ -1,5 +1,8 @@
 \chapter*{Abstract \label{sec:abstract}}
 \addcontentsline{toc}{chapter}{Abstract}
-\todo[inline]{Abstract: should outline the main approach and findings of the thesis.}
+\todo[inline]{Abstract: Minimal}
 
-\lipsum*[5-7] \cite{feynman}
+NEED TO DRAFT THE ABSTRACT \cite{IOTpassiveRadar}
+// 
+
+TESTING TESTING
