--- a/eecs-thesis-template-main/thesis/sections/01_body/05_conclusion.tex
+++ b/eecs-thesis-template-main/thesis/sections/01_body/05_conclusion.tex
@@ -2,7 +2,8 @@
 \todo[inline]{Conclusion: what conclusions can be drawn from the results of your research?}
 
 \section{Summary \& Conclusions \label{sec:summary}}
-\lipsum[31-33]
+
+\section{Limitations \label{sec: limitations}}
+
 
 \section{Possible Future Work \label{sec:future_work}}
-\lipsum[34-36]
